fixed overlapping of title section and bottom navigation

--- a/css/app.css
+++ b/css/app.css
@@ -40,7 +40,7 @@ nav {
 
 /*NAVIGATION*/
 .navigation-container {
-    z-index: 1;
+    z-index: 4;
     width: 100%;
     opacity: 0.98;
     position: fixed;
@@ -334,7 +334,9 @@ video {
     width: 100%;
     margin-bottom: 0px;
     background: #fff;
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.5);    
 }
+
 .bottom-bar-section .left li {
     display: inline-block;
 } 
